test/files/neg/t6276.check
t6276.scala:4: warning: method a in class C does nothing other than call itself recursively
      def a: Any = a // warn
                   ^
t6276.scala:5: warning: value b in class C does nothing other than call itself recursively
      val b: Any = b // warn
                   ^
t6276.scala:7: warning: method c in class C does nothing other than call itself recursively
      def c: Any = this.c // warn
                        ^
t6276.scala:8: warning: method d in class C does nothing other than call itself recursively
      def d: Any = C.this.d // warn
                          ^
t6276.scala:13: warning: method a does nothing other than call itself recursively
      def a: Any = a // warn
                   ^
t6276.scala:22: warning: method a does nothing other than call itself recursively
      def a = a // warn
              ^
error: No warnings can be incurred under -Xfatal-warnings.
6 warnings found
one error found
